; ModuleID = '/home/carl/AnghaBench/kphp-kdb/vkext/extr_vkext_schema_memcache.c_read_num_const.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/vkext/extr_vkext_schema_memcache.c_read_num_const.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tl_tree = type opaque

@schema_version = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.tl_tree* @read_num_const(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32, i32* @schema_version, align 4
  %5 = icmp sge i32 %4, 2
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = call i32 (...) @tl_parse_int()
  br label %10

8:                                                ; preds = %1
  %9 = call i32 (...) @tl_parse_long()
  br label %10

10:                                               ; preds = %8, %6
  %11 = phi i32 [ %7, %6 ], [ %9, %8 ]
  %12 = call i64 @int_to_var_nat_const_init(i32 %11)
  %13 = inttoptr i64 %12 to i8*
  store i8* %13, i8** %3, align 8
  %14 = call i64 (...) @tl_parse_error()
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %10
  br label %19

17:                                               ; preds = %10
  %18 = load i8*, i8** %3, align 8
  br label %19

19:                                               ; preds = %17, %16
  %20 = phi i8* [ null, %16 ], [ %18, %17 ]
  %21 = bitcast i8* %20 to %struct.tl_tree*
  ret %struct.tl_tree* %21
}

declare dso_local i64 @int_to_var_nat_const_init(i32) #1

declare dso_local i32 @tl_parse_int(...) #1

declare dso_local i32 @tl_parse_long(...) #1

declare dso_local i64 @tl_parse_error(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
